--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@
     background-size: 180% 180%;
     animation: gradient-animation 18s ease infinite;
   }
+
+  .PERN-LOGO{
+    border-radius: 50%;
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 180% 180%;
+    animation: gradient-animation 18s ease infinite;
+  }
   
   @keyframes gradient-animation {
     0% {
