--- a/style.css
+++ b/style.css
@@ -5,42 +5,18 @@
     animation: gradient-animation 18s ease infinite;
   }
 
-  .PERN-LOGO{
-    border-radius: 50%;
+  .PERN_LOGO{
+    border-radius: 100%;
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 180% 180%;
     animation: gradient-animation 18s ease infinite;
-  }
-  
-  @keyframes gradient-animation {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
-  }
-  
+   }
+   
   .rl_progress_bar{
     border-radius: 25%;
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
     background-size: 180% 180%;
     animation: gradient-animation 18s ease infinite;
-  }
-  
-  @keyframes gradient-animation {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
   }
 
   .rl_footer{
